--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -423,6 +423,35 @@ h3 {
   gap: 42px;
 }
 
+.carouselImageList {
+  width: 100%;
+  scroll-behavior: smooth;
+  display: inline-block;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.carouselImageList::-webkit-scrollbar {
+  display: none;
+}
+.carouselImageList :first-child {
+  margin-left: 0;
+}
+.carouselImageList :last-child {
+  margin-right: 0;
+}
+.carouselImageList li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 21px;
+  margin-right: 21px;
+}
+.carouselImageList li img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .flexWrap {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -467,6 +496,40 @@ h3 {
      object-fit: cover;
 }
 
+.testCarousel {
+  width: 100%;
+  position: relative;
+}
+.testCarousel ul {
+  width: 100%;
+  scroll-behavior: smooth;
+  display: inline-block;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.testCarousel ul::-webkit-scrollbar {
+  display: none;
+}
+.testCarousel ul :first-child {
+  margin-left: 0;
+}
+.testCarousel ul :last-child {
+  margin-right: 0;
+}
+.testCarousel li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 167px;
+  height: 156px;
+}
+.testCarousel li img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 .headerMobile {
   display: none;
   background-color: #ffffff;
